Opened 5 years ago

Closed 3 years ago

#16323 closed bug (fixed)

usb error xhci 0: unsuccessful command 9, error No slots (9)

Reported by: Forza Owned by: waddlesplash
Priority: normal Milestone: R1/beta4
Component: Drivers/USB/XHCI Version: R1/beta2
Keywords: Cc:
Blocked By: Blocking:
Platform: x86-64

Description (last modified by Forza)

I noticed that my syslog is producing error messages related to USB. As far as I can tell all my USB devices are working so I am not sure this is a big problem other than the increasing size of my syslog.

I'm running: AMD Ryzen 2700X AMD B450 Motherboard (Asus TUF B450 Gaming Plus)

2020-06-29 19:35:24 KERN: usb hub 2: port 10: new device connected

2020-06-29 19:35:25 KERN: usb error xhci 0: unsuccessful command 9, error No slots (9)

2020-06-29 19:35:25 KERN: usb error xhci 0: 2020-06-29 19:35:25 KERN: AllocateDevice() failed enable slot

Attachments (1)

syslog.txt (1.6 MB ) - added by Forza 5 years ago.

Download all attachments as: .zip

Change History (6)

comment:1 by Forza, 5 years ago

Description: modified (diff)

by Forza, 5 years ago

Attachment: syslog.txt added

comment:2 by waddlesplash, 5 years ago

Component: - GeneralDrivers/USB/XHCI
Owner: changed from nobody to waddlesplash

comment:3 by shaka, 5 years ago

I just experienced a loss of both mouse and keyboard with the latest nightly hrev54373 x64 reverted back to hrev54368 and everything working again.

comment:4 by waddlesplash, 4 years ago

Please retest after hrev55430.

comment:5 by waddlesplash, 3 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: newclosed

The original error is fixed for good in hrev55708. However it's possible there is still some other underlying problem, but that deserves a separate ticket.

Note: See TracTickets for help on using tickets.