XHCI: Consolidate xhci_device cleanup routine and use it in AllocateDevice.

This also fixes a leak of slots when initializing devices failed.
Fixes #16323, although there is some other underlying problem
which led to that error in the first place.