src/add-ons/kernel/busses/usb/xhci.h
@@ -132,6 +132,9 @@ private:
 	static	int32				InterruptHandler(void *data);
 			int32				Interrupt();
 
+			// Device management
+			void				CleanupDevice(xhci_device *device);
+
 			// Endpoint management
 			status_t			ConfigureEndpoint(xhci_endpoint* ep, uint8 slot,
 									uint8 number, uint8 type, bool directionIn,
